--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -15,11 +15,11 @@
     width: 100%;
     height: 100%;
     background-color: #FFF;
-    padding: 0 16px;
+    padding: 72px 16px 0;
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     ;
-}
+    }
 
 .mobile-menu.is-open {
     transform: translateX(0%);
@@ -57,8 +57,7 @@
 }
 
 .mobile-menu-navigation {
-    
-    padding-top: 72px;
+        
     margin-bottom: 168px;
 }
 .mobile-menu-list{
@@ -97,9 +96,10 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 24px;
+    }
+.modal-page-address{
     margin-bottom: 48px;
-}
-
+    }
 .accent-color{
     color: var(--SLATE, #434455);
     }
@@ -108,8 +108,7 @@
     display: inline-flex;
     align-items: flex-start;
     gap: 40px;
-    margin-right: 24px;
-}
+    }
  
 
 .modal-mobile-social-media-list-item{
