--- a/css/layout/team.css
+++ b/css/layout/team.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     gap: 72px;
     justify-content: center;
+    margin: 0 auto;
     }
 
 .team-list-item {
@@ -16,8 +17,10 @@
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
         0px 1px 1px 0px rgba(46, 47, 66, 0.16),
         0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-    }
-
+        }
+.team-list-img{
+    width: 100%;
+}
 .main-title-team {
     font-size: 36px;
     font-weight: 700;
@@ -30,6 +33,7 @@
     }
 
 .text-container-first {
+    width: 264px;
     padding: 32px 0;
     }
 
@@ -88,22 +92,27 @@
     }
 
 @media screen and (min-width: 768px) {
-.team-list {
+
+    .team-list {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    column-gap: 24px;
+    row-gap: 64px;
     }
 
 .team-list-item {
     width: calc((100% - 24px) / 2);
     }
+    
 }
 
 @media screen and (min-width: 1158px) {
 .team {
     padding: 120px 0;
     }
-
+.team-list{
+    row-gap: 0px;
+}
     .team-list-item {
 width: calc((100% - 3 * 24px) / 4);
     }
