--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -31,7 +31,9 @@
     color: #F4F4FD;
     display: block;
     }
-
+    .social-media-container{
+        margin-bottom: 72px;
+        }
 .social-media-title {
     color: #FFF;
     font-size: 16px;
@@ -48,7 +50,7 @@
     display: flex;
     gap: 16px;
     justify-content: center;
-    margin-bottom: 72px;
+    
     }
 
 .social-network-list-link-footer {
@@ -145,6 +147,7 @@
 
 .social-media-container {
         margin-left: 24px;
+        margin-bottom: 0px;
 }
 .social-media-title{
     text-align: left;
