--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -8,6 +8,8 @@
 }
 
 .mobile-menu {
+    display: flex;
+    flex-direction: column;
     position: fixed;
     top: 0;
     left: 0;
@@ -19,7 +21,7 @@
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     ;
-    }
+        }
 
 .mobile-menu.is-open {
     transform: translateX(0%);
@@ -56,10 +58,10 @@
     fill: #FFFFFF;
 }
 
-.mobile-menu-navigation {
+/* .mobile-menu-navigation {
         
     margin-bottom: 168px;
-}
+} */
 .mobile-menu-list{
     display: inline-flex;
     flex-direction: column;
@@ -82,6 +84,9 @@
     color: var(--OCEAN, #404BBF);
     }
 
+    .mobile-menu-contacts{
+        margin-top: 0;
+    }
 .modal-address-list-link{
     color: var(--IRIS, #4D5AE5);
     font-size: 20px;
@@ -99,6 +104,7 @@
     }
 .modal-page-address{
     margin-bottom: 48px;
+    
     }
 .accent-color{
     color: var(--SLATE, #434455);
